Update file structure

--- a/home.html
+++ b/home.html
@@ -5,7 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles/index.css" />
-    <title>Instagram-Clone</title>
+    <title>Home-Screen</title>
   </head>
-  <body></body>
+
+  <body>
+    <header class="header">
+      <h1>Good, Morning, Alex.</h1>
+    </header>
+
+    <main class="main"></main>
+
+    <footer class="footer"></footer>
+  </body>
 </html>
