--- a/home.html
+++ b/home.html
@@ -13,8 +13,12 @@
       <h1>Good, Morning, Alex.</h1>
     </header>
 
-    <main class="main"></main>
+    <main class="main">
+      <h2>Content</h2>
+    </main>
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <h2>Navigation</h2>
+    </footer>
   </body>
 </html>
