--- a/home.html
+++ b/home.html
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles/index.css" />
+    <script src="https://use.fontawesome.com/350296bd22.js"></script>
     <title>Home-Screen</title>
   </head>
 
   <body>
     <header class="header">
       <h1>Good, Morning, Alex.</h1>
+      <div class="icon-container">
+        <i class="icon-container__icon fa fa-envelope"> </i>
+        <span class="icon-container__badge"></span>
+      </div>
     </header>
 
     <main class="main">
