--- a/home.html
+++ b/home.html
@@ -22,8 +22,22 @@
       <h2>Content</h2>
     </main>
 
-    <footer class="footer">
-      <h2>Navigation</h2>
+    <footer class="footer navigation px-1rem">
+      <i class="navigation__icon--white fa fa-home fa-lg"
+        ><span class="sr-only">Home</span></i
+      >
+      <i class="navigation__icon--grey fa fa-search fa-lg"
+        ><span class="sr-only">Search</span></i
+      >
+      <i class="navigation__icon--white navigation__icon--plus fa fa-plus fa-lg"
+        ><span class="sr-only">Plus</span></i
+      >
+      <i class="navigation__icon--grey fa fa-bell fa-lg"
+        ><span class="sr-only">Bell</span></i
+      >
+      <i class="navigation__icon--grey fa fa-user-circle fa-lg"
+        ><span class="sr-only">Profile</span></i
+      >
     </footer>
   </body>
 </html>
