Finish footer header after pull request

--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <header class="header">
+    <header class="header px-1-5rem">
       <h1>Good, Morning, Alex.</h1>
       <div class="icon-container">
         <i class="icon-container__icon fa fa-envelope"> </i>
@@ -22,14 +22,12 @@
       <h2>Content</h2>
     </main>
 
-    <footer class="footer navigation px-1rem">
-      <i class="navigation__icon--white fa fa-home fa-lg"
-        ><span class="sr-only">Home</span></i
-      >
+    <footer class="footer navigation">
+      <i class="fa fa-home fa-lg"><span class="sr-only">Home</span></i>
       <i class="navigation__icon--grey fa fa-search fa-lg"
         ><span class="sr-only">Search</span></i
       >
-      <i class="navigation__icon--white navigation__icon--plus fa fa-plus fa-lg"
+      <i class="navigation__icon--plus fa fa-plus fa-lg"
         ><span class="sr-only">Plus</span></i
       >
       <i class="navigation__icon--grey fa fa-bell fa-lg"
