--- a/search.html
+++ b/search.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles/index.css" />
-    <title>Home-Screen</title>
+    <title>Search-page</title>
   </head>
 
   <body>
-    <header class="header">
-      <h1>Good, Morning, Alex.</h1>
+    <header class="search-header">
+      <label for="seach"></label>
+      <input type="text xx" name="seach" id="seach" />
     </header>
 
     <main class="main">
