--- a/profile.html
+++ b/profile.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles/index.css" />
-    <title>Home-Screen</title>
+    <title>Your Profile</title>
   </head>
 
-  <body>
+  <body class="body--profile">
     <header class="header">
       <h1>Good, Morning, Alex.</h1>
     </header>
