Ass seaxh.css ans slider

--- a/search.html
+++ b/search.html
@@ -9,9 +9,15 @@
   </head>
 
   <body>
-    <header class="search-header">
+    <header class="header header--search">
       <label for="seach"></label>
-      <input type="text xx" name="seach" id="seach" />
+      <input
+        class="search__bar"
+        type="text"
+        name="seach"
+        id="seach"
+        placeholder="Search for pepole, posts, tags..."
+      />
     </header>
 
     <main class="main">
