--- a/search.html
+++ b/search.html
@@ -16,11 +16,11 @@
         class="search__input"
         type="text"
         name="search"
-        id="seach"
+        id="search"
         size="45"
         placeholder="Search for pepole, posts, tags..."
       />
-      <button type="submitt" class="search__button">
+      <button type="submit" class="search__button">
         <svg
           width="16"
           height="16"
