Change img on search

--- a/search.html
+++ b/search.html
@@ -55,7 +55,7 @@
         <li class="search__tag px-1-5rem">Uploads</li>
       </ul>
 
-      <section class="post-no-topline">
+      <section class="post post--no-topline">
         <div class="avatar">
           <img
             class="avatar__image"
