--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
               <div class="content-container">
                 <img class="content-container__image" src="https://source.unsplash.com/200x280?airplane" alt="newsfeed image">
                 <div class="content-container__wrapper">
-                  <img class="content-container__wrapper--avatar" src="https://source.unsplash.com/100x100/?men" alt="newsfeed user">
+                  <img class="content-container__wrapper--avatar" src="https://source.unsplash.com/100x100/?women" alt="newsfeed user">
                 </div>
               </div>
             </li>
@@ -41,7 +41,7 @@
               <div class="content-container">
                 <img class="content-container__image" src="https://source.unsplash.com/200x280?car" alt="newsfeed image">
                 <div class="content-container__wrapper">
-                  <img class="content-container__wrapper--avatar" src="https://source.unsplash.com/100x100/?men" alt="newsfeed user">
+                  <img class="content-container__wrapper--avatar" src="https://source.unsplash.com/100x100/?boy" alt="newsfeed user">
                 </div>
               </div>
             </li>
@@ -49,7 +49,7 @@
               <div class="content-container">
                 <img class="content-container__image" src="https://source.unsplash.com/200x280?family" alt="newsfeed image">
                 <div class="content-container__wrapper">
-                  <img class="content-container__wrapper--avatar" src="https://source.unsplash.com/100x100/?men" alt="newsfeed user">
+                  <img class="content-container__wrapper--avatar" src="https://source.unsplash.com/100x100/?plumber" alt="newsfeed user">
                 </div>
               </div>
             </li>
@@ -100,7 +100,7 @@
         <div class="avatar">
           <img
             class="avatar__image"
-            src="https://source.unsplash.com/100x100/?faces"
+            src="https://source.unsplash.com/100x100/?student"
             alt=""
           />
           <h2 class="avatar__heading">Kat Williams</h2>
@@ -110,7 +110,7 @@
         <div class="post__slider">
           <img
             class="post__image"
-            src="https://source.unsplash.com/random/495x270"
+            src="https://source.unsplash.com/495x270?nature"
             alt=""
           />
           <img
@@ -146,7 +146,7 @@
         <div class="avatar">
           <img
             class="avatar__image"
-            src="https://source.unsplash.com/100x100/?faces"
+            src="https://source.unsplash.com/100x100/?photographer"
             alt=""
           />
           <h2 class="avatar__heading">Tony Monta</h2>
@@ -191,7 +191,7 @@
         <span class="post__burger-menu"></span>
         <img
           class="post__image"
-          src="https://source.unsplash.com/random/495x270"
+          src="https://source.unsplash.com/495x270?art"
           alt=""
         />
         <div class="post__icons">
@@ -220,7 +220,7 @@
         <div class="avatar">
           <img
             class="avatar__image"
-            src="https://source.unsplash.com/100x100/?faces"
+            src="https://source.unsplash.com/100x100/?teen"
             alt=""
           />
           <h2 class="avatar__heading">Dustin Grant</h2>
@@ -229,7 +229,7 @@
         <span class="post__burger-menu"></span>
         <img
           class="post__image"
-          src="https://source.unsplash.com/random/495x270"
+          src="https://source.unsplash.com/495x270/?berlin"
           alt=""
         />
         <div class="post__icons">
