sorry for pushing to main

--- a/alert.html
+++ b/alert.html
@@ -16,10 +16,10 @@
     </header>
 
     <main class="main px-1-5rem">
-      <span class="text--uppercase text--dark-grey" >
-        today
+      <span class="text--uppercase text--dark-grey text--separater" >
+        TODAY
       </span>
-      <ul class="">
+      <ul class="p-0 alert__gap">
         <li class="alert__entry alert__padding">
             <div class="alert__background">
               <svg
@@ -65,6 +65,44 @@
             <div class="alert__text">
             <span class="avatar__heading">SRebecca, Daisy and +11 others <span class="fw-100">liked your post.</span></span>
             <span class="avatar__timespan">30m ago</span>
+        </div>
+          </div>
+        </li>
+      </ul>
+      <span class="text--uppercase text--dark-grey text--separater my-1-5rem">
+        YESTERDAY
+      </span>
+      <ul class="p-0 grayfilter alert__gap">
+        <li class="alert__entry alert__padding">
+            <div class="alert__background">
+                <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M4.33333 6.99999H4.34M7 6.99999H7.00667M9.66667 6.99999H9.67333M13 6.99999C13 9.94532 10.3133 12.3333 7 12.3333C6.01909 12.3367 5.04986 12.1205 4.16333 11.7007L1 12.3333L1.93 9.85332C1.34133 9.02799 1 8.04932 1 6.99999C1 4.05466 3.68667 1.66666 7 1.66666C10.3133 1.66666 13 4.05466 13 6.99999Z" stroke="#F72E8E" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                    
+            </div>
+            <div class="alert__text">
+            <span class="avatar__heading">Sophia,John and +19 others <span class="fw-100">liked your post.</span></span>
+            <span class="avatar__timespan">10m ago</span>
+        </div>
+          </div>
+        </li>
+        <li class="alert__entry alert__padding">
+            <div class="alert__background">
+             <span class="text--blue">S</span> 
+            </div>
+            <div class="alert__text">
+            <span class="avatar__heading">Rebecca, Daisy and +11 others <span class="fw-100">liked your post.</span></span>
+            <span class="avatar__timespan">30m ago</span>
+        </div>
+          </div>
+        </li>
+        <li class="alert__entry alert__padding">
+            <div class="alert__background">
+             <span class="">@</span> 
+            </div>
+            <div class="alert__text">
+            <span class="avatar__heading">Ralph Edwards<span class="fw-100">mentioned you in a post</span></span>
+            <span class="avatar__timespan">1d ago</span>
         </div>
           </div>
         </li>
