Update label for Search bar

--- a/search.html
+++ b/search.html
@@ -11,7 +11,7 @@
 
   <body>
     <header class="header header--search">
-      <label for="search"></label>
+      <label hidden for="search">Search for pepole, posts, tags...</label>
       <input
         class="search__input"
         type="text"
