--- a/postView.html
+++ b/postView.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/styles/index.css" />
+    <script src="https://use.fontawesome.com/350296bd22.js"></script>
+    <title>Home-Screen</title>
+  </head>
+
+  <body>
+    <header class="header--post-View px-1-5rem">
+      <div class="icon-container">
+        <svg
+          width="14"
+          height="12"
+          viewBox="0 0 14 12"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M5.66667 10.6666L1 5.99992M1 5.99992L5.66667 1.33325M1 5.99992H13"
+            stroke="white"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+        </svg>
+      </div>
+      <h1 class="uppercase post-view__centerh1">post</h1>
+    </header>
+
+    <main class="main"></main>
+
+    <footer class="footer navigation"></footer>
+  </body>
 </html>
