update navigation to anchors
Co-authored-by: ronnyleibham <ronnyleibham@users.noreply.github.com>

--- a/search.html
+++ b/search.html
@@ -180,8 +180,10 @@
       <i class="navigation__icon--grey fa fa-bell fa-lg"
         ><span class="sr-only">Bell</span></i
       >
-      <i class="navigation__icon--grey fa fa-user-circle fa-lg"
-        ><span class="sr-only">Profile</span></i
+      <a href="profile.html"
+        ><i class="navigation__icon--grey fa fa-user-circle fa-lg"
+          ><span class="sr-only">Profile</span></i
+        ></a
       >
     </footer>
   </body>
