--- a/postView.html
+++ b/postView.html
@@ -69,6 +69,52 @@
       </section>
     </main>
 
-    <footer class="footer navigation"></footer>
+    <footer class="post-view__footer px-1-5rem">
+      <label for="comment" hidden>type your comment here</label>
+      <input
+        class="search__input"
+        type="text"
+        name="comment"
+        id="comment"
+        style="width: 100%"
+        placeholder="Type your comments here..."
+      />
+
+      <button class="post-view__add-comment" type="submit">
+        <svg
+          width="16"
+          height="16"
+          viewBox="0 0 16 16"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M8 2V8M8 8V14M8 8H14M8 8H2"
+            stroke="#727477"
+            stroke-width="3"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+        </svg>
+      </button>
+
+      <button class="post-view__enter-comment" type="submit">
+        <svg
+          width="18"
+          height="18"
+          viewBox="0 0 18 18"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M9 14.8333V8.16667M9 14.8333L16.5 16.5L9 1.5L1.5 16.5L9 14.8333Z"
+            stroke="white"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+        </svg>
+      </button>
+    </footer>
   </body>
 </html>
