--- a/postView.html
+++ b/postView.html
@@ -67,6 +67,8 @@
           ></path>
         </svg>
       </section>
+
+      some text
     </main>
 
     <footer class="post-view__footer px-1-5rem">
