--- a/generalProfile.html
+++ b/generalProfile.html
@@ -10,14 +10,9 @@
   </head>
 
   <body class="grid--profile">
-    <header class="header header--profile px-1-5rem">
+    <header class="header header--profile header--general-profile px-1-5rem">
       <div class="icon-container">
-        <i class="icon-container__icon fa fa-envelope"> </i>
-        <span class="icon-container__badge"></span>
-      </div>
-      <div class="icon-container">
-        <i class="icon-container__icon fa fa-bookmark-o" aria-hidden="true">
-        </i>
+        <i class="icon-container__icon fa fa-arrow-left"> </i>
       </div>
     </header>
 
@@ -29,7 +24,10 @@
             src="https://source.unsplash.com/500x500/?faces"
             alt=""
           />
-          <h1 class="card--name">Profile Name</h1>
+          <div>
+            <h1 class="card-name--generalprofile">Profile Name</h1>
+            <i class="icon-container icon-container__icon fa fa-envelope"> </i>
+          </div>
           <h2 class="card--city">Stadt, Land</h2>
           <p class="card--slogan">You have to taste to know it's waste.</p>
         </div>
@@ -42,7 +40,7 @@
             <li>1,589</li>
             <li class="card-list-item--li">Following</li>
           </ul>
-          <p class="card-edit-profile-button">Edit Profile</p>
+          <p class="card-follow-button">Follow</p>
         </div>
         <ul class="filter-posts">
           <li class="text--underline">Posts</li>
