Add Links to footer

--- a/generalProfile.html
+++ b/generalProfile.html
@@ -203,21 +203,21 @@
     </main>
 
     <footer class="footer navigation">
-      <i class="fa fa-home fa-lg"><span class="sr-only">Home</span></i>
-      <i class="navigation__icon--grey fa fa-search fa-lg"
-        ><span class="sr-only">Search</span></i
-      >
-      <i class="navigation__icon--plus fa fa-plus fa-lg"
-        ><span class="sr-only">Plus</span></i
-      >
-      <i class="navigation__icon--grey fa fa-bell fa-lg"
-        ><span class="sr-only">Bell</span></i
-      >
-      <a href="profile.html"
-        ><i class="navigation__icon--grey fa fa-user-circle fa-lg"
-          ><span class="sr-only">Profile</span></i
-        ></a
-      >
-    </footer>
+        <a href="home.html"><i class="navigation__icon--grey fa fa-home fa-lg"><span class="sr-only">Home</span></i></a>
+        <a href="search.html"><i class="navigation__icon--grey fa fa-search fa-lg"
+          ><span class="sr-only">Search</span></i
+        ></a>
+        <a href="generalProfile.html"><i class="text--white navigation__icon--plus fa fa-plus fa-lg"
+          ><span class="sr-only">Plus</span></i
+        ></a>
+        <a href="alert.html"<i class="navigation__icon--grey fa fa-bell fa-lg"
+          ><span class="sr-only">Bell</span></i
+        ></a>
+        <a href="profile.html"
+          ><i class="navigation__icon--grey fa fa-user-circle fa-lg"
+            ><span class="sr-only">Profile</span></i
+          ></a
+        >
+      </footer>
   </body>
 </html>
