bug fix in footer

--- a/home.html
+++ b/home.html
@@ -298,7 +298,7 @@
       <a href="generalProfile.html"><i class="navigation__icon--plus navigation__icon--grey fa fa-plus fa-lg"
         ><span class="sr-only">Plus</span></i
       ></a>
-      <a href="alert.html"<i class="navigation__icon--grey fa fa-bell fa-lg"
+      <a href="alert.html"><i class="navigation__icon--grey fa fa-bell fa-lg"
         ><span class="sr-only">Bell</span></i
       ></a>
       <a href="profile.html"
