screenreader fixes in footer

--- a/home.html
+++ b/home.html
@@ -290,20 +290,20 @@
 
     </main>
 
-    <footer class="footer navigation">
+    <footer class="footer navigation" role="navigation" aria-label="main">
       <a href="home.html"><i class="text--white fa fa-home fa-lg"><span class="sr-only">Home</span></i></a>
       <a href="search.html"><i class="navigation__icon--grey fa fa-search fa-lg"
         ><span class="sr-only">Search</span></i
       ></a>
       <a href="generalProfile.html"><i class="navigation__icon--plus navigation__icon--grey fa fa-plus fa-lg"
-        ><span class="sr-only">Plus</span></i
+        ><span class="sr-only">Create post</span></i
       ></a>
       <a href="alert.html"><i class="navigation__icon--grey fa fa-bell fa-lg"
-        ><span class="sr-only">Bell</span></i
+        ><span class="sr-only">Notifications</span></i
       ></a>
       <a href="profile.html"
         ><i class="navigation__icon--grey fa fa-user-circle fa-lg"
-          ><span class="sr-only">Profile</span></i
+          ><span class="sr-only">Your profile</span></i
         ></a
       >
     </footer>
