Fix styling extensions again

--- a/generalProfile.html
+++ b/generalProfile.html
@@ -80,7 +80,7 @@
           class="post__bookmark svg-inline--fa fa-bookmark"
           role="img"
           xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 384 512"
+          viewbox="0 0 384 512"
         >
           <path
             fill="currentColor"
@@ -116,7 +116,7 @@
           class="post__bookmark svg-inline--fa fa-bookmark"
           role="img"
           xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 384 512"
+          viewbox="0 0 384 512"
         >
           <path
             fill="currentColor"
@@ -154,7 +154,7 @@
           class="post__bookmark svg-inline--fa fa-bookmark"
           role="img"
           xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 384 512"
+          viewbox="0 0 384 512"
         >
           <path
             fill="currentColor"
@@ -192,7 +192,7 @@
           class="post__bookmark svg-inline--fa fa-bookmark"
           role="img"
           xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 384 512"
+          viewbox="0 0 384 512"
         >
           <path
             fill="currentColor"
@@ -203,21 +203,31 @@
     </main>
 
     <footer class="footer navigation">
-        <a href="home.html"><i class="navigation__icon--grey fa fa-home fa-lg"><span class="sr-only">Home</span></i></a>
-        <a href="search.html"><i class="navigation__icon--grey fa fa-search fa-lg"
+      <a href="home.html"
+        ><i class="navigation__icon--grey fa fa-home fa-lg"
+          ><span class="sr-only">Home</span></i
+        ></a
+      >
+      <a href="search.html"
+        ><i class="navigation__icon--grey fa fa-search fa-lg"
           ><span class="sr-only">Search</span></i
-        ></a>
-        <a href="generalProfile.html"><i class="text--white navigation__icon--plus fa fa-plus fa-lg"
+        ></a
+      >
+      <a href="generalProfile.html"
+        ><i class="text--white navigation__icon--plus fa fa-plus fa-lg"
           ><span class="sr-only">Plus</span></i
-        ></a>
-        <a href="alert.html"<i class="navigation__icon--grey fa fa-bell fa-lg"
+        ></a
+      >
+      <a href="alert.html"
+        ><i class="navigation__icon--grey fa fa-bell fa-lg"
           ><span class="sr-only">Bell</span></i
-        ></a>
-        <a href="profile.html"
-          ><i class="navigation__icon--grey fa fa-user-circle fa-lg"
-            ><span class="sr-only">Profile</span></i
-          ></a
-        >
-      </footer>
+        ></a
+      >
+      <a href="profile.html"
+        ><i class="navigation__icon--grey fa fa-user-circle fa-lg"
+          ><span class="sr-only">Profile</span></i
+        ></a
+      >
+    </footer>
   </body>
 </html>
