--- a/postView.html
+++ b/postView.html
@@ -15,7 +15,7 @@
         <svg
           width="14"
           height="12"
-          viewBox="0 0 14 12"
+          viewbox="0 0 14 12"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
         >
@@ -63,7 +63,7 @@
           class="post__bookmark svg-inline--fa fa-bookmark"
           role="img"
           xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 384 512"
+          viewbox="0 0 384 512"
         >
           <path
             fill="currentColor"
@@ -80,7 +80,7 @@
             class="align-self-center"
             width="12"
             height="7"
-            viewBox="0 0 12 7"
+            viewbox="0 0 12 7"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
           >
@@ -111,7 +111,7 @@
             <svg
               width="14"
               height="14"
-              viewBox="0 0 14 14"
+              viewbox="0 0 14 14"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
             >
@@ -140,7 +140,7 @@
             <svg
               width="14"
               height="14"
-              viewBox="0 0 14 14"
+              viewbox="0 0 14 14"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
             >
@@ -169,7 +169,7 @@
             <svg
               width="14"
               height="14"
-              viewBox="0 0 14 14"
+              viewbox="0 0 14 14"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
             >
@@ -198,7 +198,7 @@
             <svg
               width="14"
               height="14"
-              viewBox="0 0 14 14"
+              viewbox="0 0 14 14"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
             >
@@ -227,7 +227,7 @@
             <svg
               width="14"
               height="14"
-              viewBox="0 0 14 14"
+              viewbox="0 0 14 14"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
             >
@@ -256,7 +256,7 @@
             <svg
               width="14"
               height="14"
-              viewBox="0 0 14 14"
+              viewbox="0 0 14 14"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
             >
@@ -280,7 +280,6 @@
         type="text"
         name="comment"
         id="comment"
-        style="width: 100%"
         placeholder="Type your comments here..."
       />
 
@@ -288,7 +287,7 @@
         <svg
           width="16"
           height="16"
-          viewBox="0 0 16 16"
+          viewbox="0 0 16 16"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
         >
@@ -306,7 +305,7 @@
         <svg
           width="18"
           height="18"
-          viewBox="0 0 18 18"
+          viewbox="0 0 18 18"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
         >
