--- a/search.html
+++ b/search.html
@@ -24,7 +24,7 @@
         <svg
           width="16"
           height="16"
-          viewBox="0 0 16 16"
+          viewbox="0 0 16 16"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
         >
@@ -84,7 +84,7 @@
           class="post__bookmark svg-inline--fa fa-bookmark"
           role="img"
           xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 384 512"
+          viewbox="0 0 384 512"
         >
           <path
             fill="currentColor"
@@ -124,7 +124,7 @@
           class="post__bookmark svg-inline--fa fa-bookmark"
           role="img"
           xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 384 512"
+          viewbox="0 0 384 512"
         >
           <path
             fill="currentColor"
@@ -159,7 +159,7 @@
           class="post__bookmark svg-inline--fa fa-bookmark"
           role="img"
           xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 384 512"
+          viewbox="0 0 384 512"
         >
           <path
             fill="currentColor"
@@ -170,16 +170,27 @@
     </main>
 
     <footer class="footer navigation">
-      <a href="home.html"><i class="navigation__icon--grey fa fa-home fa-lg"><span class="sr-only">Home</span></i></a>
-      <a href="search.html"><i class="text--white fa fa-search fa-lg"
-        ><span class="sr-only">Search</span></i
-      ></a>
-      <a href="generalProfile.html"><i class="navigation__icon--plus navigation__icon--grey fa fa-plus fa-lg"
-        ><span class="sr-only">Plus</span></i
-      ></a>
-      <a href="alert.html"<i class="navigation__icon--grey fa fa-bell fa-lg"
-        ><span class="sr-only">Bell</span></i
-      ></a>
+      <a href="home.html"
+        ><i class="navigation__icon--grey fa fa-home fa-lg"
+          ><span class="sr-only">Home</span></i
+        ></a
+      >
+      <a href="search.html"
+        ><i class="text--white fa fa-search fa-lg"
+          ><span class="sr-only">Search</span></i
+        ></a
+      >
+      <a href="generalProfile.html"
+        ><i
+          class="navigation__icon--plus navigation__icon--grey fa fa-plus fa-lg"
+          ><span class="sr-only">Plus</span></i
+        ></a
+      >
+      <a href="alert.html"
+        ><i class="navigation__icon--grey fa fa-bell fa-lg"
+          ><span class="sr-only">Bell</span></i
+        ></a
+      >
       <a href="profile.html"
         ><i class="navigation__icon--grey fa fa-user-circle fa-lg"
           ><span class="sr-only">Profile</span></i
