testing: how to resolve conflicts

--- a/search.html
+++ b/search.html
@@ -193,7 +193,7 @@
       >
       <a href="profile.html"
         ><i class="navigation__icon--grey fa fa-user-circle fa-lg"
-          ><span class="sr-only">Profile</span></i
+          ><span class="sr-only">Torben schreibt quatsch</span></i
         ></a
       >
     </footer>
